# AutoAuction

./: .replit  README.md  package-lock.json  package.json  pyproject.toml
backend/: .env  create_admin.py  create_superuser.py  load_env.py  requirements.txt  run_with_real_email.sh  scan_unicode.py  test_email_direct.py  test_smtp.py  unicode_debug.py
backend/auction/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  utils.py  views.py
backend/auction/migrations/: 0001_initial.py  0002_initial.py  0003_alter_car_mileage.py  0004_alter_car_current_price.py  0005_remove_car_payment_methods_remove_car_tags_carimage_and_more.py
backend/auctions/: consumers.py  models.py  routing.py  serializers.py  views.py
backend/chat/: admin.py  apps.py  consumers.py  models.py  routing.py  serializers.py  signals.py  urls.py  views.py
backend/chat/migrations/: 0001_initial.py  0002_alter_conversation_unique_together_and_more.py
backend/config/: asgi.py  middleware.py  settings.py  urls.py
backend/custom_admin/: __init__.py  apps.py  forms.py  urls.py  views.py
backend/media/avatars/: images.jfif
backend/users/: admin.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/utils/: README.md  __init__.py  email_config.py  email_service.py  google_mail_helper.py  test_email.py  test_email_and_diagnostics.py  test_template_email.py  update_email_password.py
frontend/: index.html  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: .env  App.jsx  index.jsx  routes.js
(+114 files in other folders)
