[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "asgiref>=3.8.1",
    "channels>=4.2.0",
    "daphne>=4.1.2",
    "django>=5.1.7",
    "django-cors-headers>=4.7.0",
    "djangorestframework>=3.15.2",
    "djangorestframework-simplejwt>=5.5.0",
    "pillow>=11.1.0",
    "pyjwt>=2.9.0",
    "python-dotenv>=1.1.0",
]
